test/link/script-huge-ds.link
rom0
	ds $10000
